--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h<html>
 
 <head>
-<title> May 25, 2023</title>
+<title> stlogan-site</title>
 <meta name="keywords" content= "design, UNC, maymester">
 
 <link rel="stylesheet" type="text/css" href="default.css">
@@ -14,8 +14,8 @@
 
 <body>
 
-<h1> this is a header 1</h1>
-<h5> this is a header 5</h5>
+<h1> More information soon 1</h1>
+<h5> Additional Information Sooon 5</h5>
 
 
 
@@ -41,8 +41,8 @@
 
 </ol>
 
-<div id="foxpic">
-<img src="graphics/fox.png">
+<div id="loading-img">
+<img src="loading-img.jpeg">
 </div>
 
 <br>
