--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <head>
 <title> stlogan-site</title>
-<meta name="keywords" content= "design, UNC, maymester">
 
 <link rel="stylesheet" type="text/css" href="default.css">
 
@@ -14,8 +13,8 @@
 
 <body>
 
-<h1> More information soon 1</h1>
-<h5> Additional Information Sooon 5</h5>
+<h1> Prepare to Enter a New World </h1>
+<h5> Additional Information Coming Sooon </h5>
 
 
 
@@ -51,7 +50,7 @@
 
 <br>
 
-<a href="https://www.nytimes.com/" target=_blank" > New York Times</a>
+<a href="https://www.arianagrande.com/" target=_blank" > Stream Before You Enter</a>
      
 </body>
 
