--- a/index.html
+++ b/index.html
@@ -27,18 +27,12 @@
 </p>
 
 <ul>
-    <li>blue</li>
-    <li>green</li>
-    <li>red</li>
+    <li>work</li>
+    <li>in</li>
+    <li>progress</li>
 
 </ul>
 
-<ol>
-    <li>blue</li>
-    <li>green</li>
-    <li>red</li>
-
-</ol>
 
 <div id="loading-img">
 <img src="loading-img.jpeg">
