--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
 
 
-    This is <b>page 1</b>,<br>paragraph 2.
+    This is a new era of media,<br>Excited for whats to come.
 
 
 
 <p>
-    <i>paragraph 2</i>
+    <i>Whats to come?</i>
 </p>
 
 <ul>
@@ -40,7 +40,6 @@
 
 <br>
 
-<a href = "page2.html">Page 2</a>
 
 <br>
 
