--- a/index.html
+++ b/index.html
@@ -1,50 +1,17 @@
-<h<html>
-
-<head>
-<title> stlogan-site</title>
-
-<link rel="stylesheet" type="text/css" href="default.css">
-
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
-    </style> 
-
-</head>
-
-<body>
-
-<h1> Prepare to Enter a New World </h1>
-<h5> Additional Information Coming Sooon </h5>
-
-
-
-    This is a new era of media,<br>Excited for whats to come.
-
-
-
-<p>
-    <i>Whats to come?</i>
-</p>
-
-<ul>
-    <li>work</li>
-    <li>in</li>
-    <li>progress</li>
-
-</ul>
-
-
-<div id="loading-img">
-<img src="loading-img.jpeg">
-</div>
-
-<br>
-
-
-<br>
-
-<a href="https://www.arianagrande.com/" target=_blank" > Stream Before You Enter</a>
-     
-</body>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Website</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  </head>
+  <body>
+    <main>
+        <h1>Welcome to My Website</h1>  
+    </main>
+	<script src="index.js"></script>
+  </body>
 </html>
