--- a/index.html
+++ b/index.html
@@ -1,17 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <main>
-        <h1>Welcome to My Website</h1>  
-    </main>
-	<script src="index.js"></script>
-  </body>
+<html>
+<head>
+  <title> § stlogan</title>
+  <style>
+    body {
+      background-color: rgb(236, 203, 164);
+      text-align: left;
+    }
+
+    h1 {
+      color: rgb(255, 255, 255);
+      font-size: 80px;
+      border: 3px solid rgb(209, 162, 55);
+      border-radius: 2px;
+      padding: 2px;
+      display: inline-block;
+      background-color: rgb(250, 224, 166); /* Add background color */
+    }
+
+    h2 {
+      color: rgb(255, 255, 255);
+      font-size: 40px;
+      border: 2px solid rgb(209, 162, 55);
+      border-radius: 5px;
+      padding: 5px;
+      display: inline-block;
+      background-color: rgb(250, 224, 166); /* Add background color */
+    }
+
+    p {
+      color: rgb(255, 255, 255);
+      font-size: 30px;
+    }
+
+    /* Add border style for the image */
+    img {
+      border: 3px solid rgb(209, 162, 55);
+      padding: 6px;
+      background-color: rgb(255, 255, 255); /* Add background color */
+    }
+  </style>
+</head>
+<body>
+  <h1>SEANS GALLERY</h1>
+  
+
+  <h2>Ⓒ</h2>
+  <p>Collection of work created throughout COMM 150 Maymester 2023.</p>
+  
+  <br> <!-- Add line break here -->
+  
+  <h2>Twine</h2>
+
+
+  <img src="1B Assignment 2.png" alt="Image 1">
+  
+  <h2>Game</h2>
+  <p>You can access my twine game 'Bad Blood' at <a href="Bad Blood.html" target="_blank">Bad Blood.com</a>.</p>
+</body>
 </html>
+
+
+
