--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> § stlogan</title>
+  <title> § seantlogan</title>
   <style>
     body {
       background-color: rgb(236, 203, 164);
@@ -56,7 +56,7 @@
   <img src="1B Assignment 2.png" alt="Image 1">
   
   <h2>Game</h2>
-  <p>You can access my twine game 'Bad Blood' at <a href="Bad Blood.html" target="_blank">Bad Blood.com</a>.</p>
+  <p>You can access my Twine game 'Bad Blood' at <a href="Bad Blood.html" target="_blank">Bad Blood.com</a>.</p>
 </body>
 </html>
 
