--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
   
   <br> <!-- Add line break here -->
   
-  <h2>Twine</h2>
+  <h2>Twine Game</h2>
 
 
   <img src="1B Assignment 2.png" alt="Image 1">
   
-  <h2>Game</h2>
+
   <p>You can access my Twine game 'Bad Blood' at <a href="Bad Blood.html" target="_blank">Bad Blood.com</a>.</p>
 </body>
 </html>
