--- a/indexpage.html
+++ b/indexpage.html
@@ -1,2 +1,10 @@
-<a href="Bad Blood.html">Twine Game</a>
-<a href="Index.html">Web Page</a>
+<!DOCTYPE html>
+<html>
+<head>
+  <title> § seantlogan</title>
+</head>
+<body>
+    <a href="Bad Blood.html">Twine Game</a>
+    <a href="Index.html">Web Page</a>
+</body>
+</html>
