--- a/index.html
+++ b/index.html
@@ -2,61 +2,9 @@
 <html>
 <head>
   <title> § seantlogan</title>
-  <style>
-    body {
-      background-color: rgb(236, 203, 164);
-      text-align: left;
-    }
-
-    h1 {
-      color: rgb(255, 255, 255);
-      font-size: 80px;
-      border: 3px solid rgb(209, 162, 55);
-      border-radius: 2px;
-      padding: 2px;
-      display: inline-block;
-      background-color: rgb(250, 224, 166); /* Add background color */
-    }
-
-    h2 {
-      color: rgb(255, 255, 255);
-      font-size: 40px;
-      border: 2px solid rgb(209, 162, 55);
-      border-radius: 5px;
-      padding: 5px;
-      display: inline-block;
-      background-color: rgb(250, 224, 166); /* Add background color */
-    }
-
-    p {
-      color: rgb(255, 255, 255);
-      font-size: 30px;
-    }
-
-    /* Add border style for the image */
-    img {
-      border: 3px solid rgb(209, 162, 55);
-      padding: 6px;
-      background-color: rgb(255, 255, 255); /* Add background color */
-    }
-  </style>
 </head>
 <body>
-  <h1>SEANS GALLERY</h1>
-  
-
-  <h2>Ⓒ</h2>
-  <p>Collection of work created throughout COMM 150 Maymester 2023.</p>
-  
-  <br> <!-- Add line break here -->
-  
-
-  <img src="1B Assignment 2.png" alt="Image 1">
-  
-
-  <p>You can access my Twine game 'Bad Blood' at <a href="Bad Blood.html" target="_blank">Bad Blood.com</a>.</p>
+    <a href="Bad Blood.html">Twine Game</a>
+    <a href="Index.html">Web Page</a>
 </body>
 </html>
-
-
-
