--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <a href="Bad Blood.html">Twine Game</a>
-    <a href="Index.html">Web Page</a>
+    <a href="webpage.html">Web Page</a>
 </body>
 </html>
