--- a/webpage.html
+++ b/webpage.html
@@ -38,6 +38,9 @@
       border: 3px solid rgb(209, 162, 55);
       padding: 6px;
       background-color: rgb(255, 255, 255); /* Add background color */
+      position:absolute;
+      top:300px;
+      left: 200px;
     }
   </style>
 </head>
