--- a/Bad Blood.html
+++ b/Bad Blood.html
@@ -61,7 +61,7 @@ src=https://i.giphy.com/3oEduTehe2dcFJ8Hqo.gif&gt;
 &lt;/style&gt;(text-colour:red)[AFTER THE FALL, THE TRINITY HAS HELPED RESTORE YOUR POWER]
 
 &lt;img
-src=https://static.wikia.nocookie.net/haileesteinfeld6916/images/f/f3/Bblood1.gif/revision/latest?cb=20161026063725&gt;
+src=https://img.buzzfeed.com/buzzfeed-static/static/2015-05/18/12/enhanced/webdr06/anigif_original-grid-image-10434-1431966864-6.gif?crop=573:379;165,0&gt;
 &lt;img&gt;
 
 
