--- a/Bad Blood.html
+++ b/Bad Blood.html
@@ -153,10 +153,10 @@ src=https://i.makeagif.com/media/5-19-2015/oC-Cxj.gif&gt;
 src=https://i.gifer.com/OwTX.gif&gt;
 &lt;img
 
-&lt;/style&gt;(text-colour:red)[YOUVE SPENT MONTHS PREPARING FOR THE FINAL STRIKE]
+&lt;/style&gt;(text-colour:red)[YOUVE SPENT MONTHS PREPARING FOR THE FINAL STRIKE, ITS TIME TO SEE WHAT CATASTROPHE HAS BEEN UP TO]
 
 &lt;/style&gt;(text-colour:red)[[CATASTROPHE]]
-&lt;/style&gt;(text-colour:red)[[STRIKE]]</tw-passagedata><tw-passagedata pid="15" name="MEET AGAIN" tags="" position="800,1425" size="100,100">&lt;/style&gt;(text-colour:red)[THE TIME HAS COME TO TAKE BACK WHAT IS YOURS]
+</tw-passagedata><tw-passagedata pid="15" name="MEET AGAIN" tags="" position="800,1425" size="100,100">&lt;/style&gt;(text-colour:red)[THE TIME HAS COME TO TAKE BACK WHAT IS YOURS]
 
 &lt;img
 src=https://assets.vogue.com/photos/58917ea1b482c0ea0e4d8a4f/16:9/w_1280,c_limit/bad-blood-holding-new.gif&gt;
