--- a/Bad Blood.html
+++ b/Bad Blood.html
@@ -30,7 +30,7 @@ src=https://www.coupdemainmagazine.com/sites/default/files/styles/full_width/pub
 src=https://cdn.thehollywoodgossip.com/uploads/2015/05/catastrophe-strikes.gif&gt;
 &lt;img&gt;
 
-&lt;/style&gt;(text-colour:red)[AFTER SUCESSFULLY GETTING BACK YOUR CASE FROM ROBBERS, ARSYNS BETRAYS YOU AND TAKES THE CASE FOR HERSELF. YOU NOW DEVISE A REVENGE PLAN TO TAKE BACK WHATS YOURS, BUT YOU CAN&#39;T DO IT ALONE]
+&lt;/style&gt;(text-colour:red)[AFTER SUCESSFULLY GETTING BACK YOUR CASE FROM ROBBERS, ARSYN BETRAYS YOU AND TAKES THE CASE FOR HERSELF. YOU NOW DEVISE A REVENGE PLAN TO TAKE BACK WHATS YOURS, BUT YOU CAN&#39;T DO IT ALONE]
 
 &lt;/style&gt;(text-colour:red)[[RESTORE YOUR POWER]]
 
@@ -171,7 +171,7 @@ src=https://media.tenor.com/PSht7hyNE4MAAAAd/badblood-taylorswift.gif&gt;
 
 &lt;/style&gt;(text-colour:red)[[STRIKE]]
 
-</tw-passagedata><tw-passagedata pid="16" name="YES, CONTINUE TO BATTLE" tags="" position="800,1300" size="100,100">&lt;/style&gt;(text-colour:red)[CONGRADULATIONS, YOU&#39;VE MADE IT THROUGH TRAINING] 
+</tw-passagedata><tw-passagedata pid="16" name="YES, CONTINUE TO BATTLE" tags="" position="800,1300" size="100,100">&lt;/style&gt;(text-colour:red)[CONGRATULATIONS, YOU&#39;VE MADE IT THROUGH TRAINING] 
 
 &lt;img
 src=https://media1.popsugar-assets.com/files/thumbor/GXVlBFQ8gOZfkxx23jLQIEjEj7c/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2015/05/18/815/n/1922398/d37f405295ffd6ae_BB5/i/When-Taylor-Breaks-Through-Wall-Like-Aint-Thang.gif&gt;
